<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:divider="@drawable/divider">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/ex_name"
            android:textColor="@color/tosca"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex_address"
            android:textColor="@color/grey"
            android:textSize="14sp"
            android:fontFamily="@font/josefin_sans_bold"
            android:layout_marginBottom="6dp"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/ex_price"
            android:textColor="@color/red"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>